--- a/requirements.txt
+++ b/requirements.txt
@@ -31,3 +31,15 @@ langchain-openai==0.0.5
 # 유틸리티
 aiofiles==23.2.1
 tenacity==8.2.3
+itsdangerous==2.1.2  # SessionMiddleware 필수
+
+# 데이터베이스
+sqlalchemy==2.0.25
+alembic==1.13.1
+asyncpg==0.29.0
+
+# 인증
+authlib==1.3.0
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+email-validator==2.1.0
