--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ slowapi==0.1.9  # Rate limiting
 sqlalchemy==2.0.25
 alembic==1.13.1
 asyncpg==0.29.0
+psycopg2-binary==2.9.9  # Alembic migration용 (sync driver)
 
 # 인증
 authlib==1.3.0
