--- a/alembic.ini
+++ b/alembic.ini
@@ -2,6 +2,8 @@
 script_location = alembic
 prepend_sys_path = .
 version_path_separator = os
+# sqlalchemy.url is set dynamically in env.py from settings.database_url
+# sqlalchemy.url = driver://user:pass@localhost/dbname
 
 [loggers]
 keys = root,sqlalchemy,alembic
