--- a/requirements.txt
+++ b/requirements.txt
@@ -19,10 +19,14 @@ pgvector==0.2.4  # PostgreSQL 벡터 확장 (AWS 프로덕션용)
 
 # LangChain (텍스트 분할 전용)
 langchain==0.1.0
+langchain-community==0.0.13
+tiktoken==0.5.2
 
 # LLM 클라이언트
 openai==1.54.0
-anthropic==0.39.0
+anthropic==0.43.0
+httpx==0.27.2
+langchain-openai==0.0.5
 
 # 유틸리티
 aiofiles==23.2.1
