--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ openai==1.54.0
 anthropic==0.38.0  # httpx 0.27.x 호환 버전 (0.39.0+는 httpx 0.28+ 필요, chromadb는 httpx>=0.27.0 필요)
 httpx==0.27.2
 langchain-openai==0.0.5
+google-generativeai==0.8.3
 
 # 유틸리티
 aiofiles==23.2.1
