--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,24 +21,24 @@ services:
     networks:
       - rag-network
 
-  chromadb:
-    image: chromadb/chroma:0.5.3
-    platform: linux/arm64
-    container_name: chromadb
-    volumes:
-      - ./data/chroma_data:/chroma/chroma
-    environment:
-      - IS_PERSISTENT=TRUE
-      - ANONYMIZED_TELEMETRY=FALSE
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/api/v1/heartbeat"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
-    restart: unless-stopped
-    networks:
-      - rag-network
+  # chromadb:
+  #   image: chromadb/chroma:0.5.3
+  #   platform: linux/arm64
+  #   container_name: chromadb
+  #   volumes:
+  #     - ./data/chroma_data:/chroma/chroma
+  #   environment:
+  #     - IS_PERSISTENT=TRUE
+  #     - ANONYMIZED_TELEMETRY=FALSE
+  #   healthcheck:
+  #     test: ["CMD", "curl", "-f", "http://localhost:8000/api/v1/heartbeat"]
+  #     interval: 10s
+  #     timeout: 5s
+  #     retries: 5
+  #     start_period: 30s
+  #   restart: unless-stopped
+  #   networks:
+  #     - rag-network
 
   # Redis 컨테이너 설정
   redis:
@@ -87,8 +87,6 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-      chromadb:
-        condition: service_healthy 
       redis:
         condition: service_healthy
 
